--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: My website
-subtitle: This is where I will tell my friends way too much about me
+title: Welcome to Me
+subtitle: This is where I will tell you fake stories that aren't about me
 use-site-title: true
 ---
 
